# gpu_monitor

./: .coverage  .gitignore  LICENSE  README.md  config.json.sample  create_git_history.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
scripts/: com.targoman.gpu-monitor.plist  dev.sh  gpu-monitor.service  gpu_monitor  test.sh
src/gpu_monitor/: __init__.py  aggregation.py  config.py  db.py  logging.py  main.py  nvml.py  server.py
tests/: conftest.py  test_aggregation.py  test_config.py  test_db.py  test_server.py
